Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -695,7 +695,7 @@
     "generated-supplier-estimations": "%quantity% budżetów dostawców wygenerowanych.",
     "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
-    "global-dto-2": "Dto. global 2",
+    "global-dto-2": "Zniżka globalna 2",
     "graphics": "Grafiki",
     "greater-than": "Większy niż",
     "grid-help": "Control + Enter do wstawienia nowej linii. Możesz przesuwać lub usuwać linie klikając numer linii.",
