--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1046,7 +1046,7 @@
     "note": "Nota",
     "notes": "Notas",
     "notice": "Aviso",
-    "notices": "Avisos",
+    "notices": "Notificações",
     "notification": "Notificação",
     "notifications": "Notificações",
     "november": "Novembro",
@@ -1140,7 +1140,7 @@
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
-    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-endpoint": "Endpoint do PostgreSQL",
     "pgsql-ssl-mode": "Modo SSL PostgreSQL",
     "phase": "Fase",
     "phone": "Telefone",
