--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1186,7 +1186,7 @@
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
     "previous-documents": "Documentos anteriores",
-    "previous-quarter": "Trimestre anterior",
+    "previous-quarter": "Último trimestre",
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
