Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Liste der Datensätze drucken",
     "print-price": "Preise drucken",
     "print-quantity": "Druckmenge",
+    "print-ticket": "Ticket drucken",
     "printed": "gedruckt",
     "printing-format": "Druckformat",
     "printing-formats": "Druckformate",
