--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Print list of records",
     "print-price": "Print prices",
     "print-quantity": "Print quantity",
+    "print-ticket": "Print ticket",
     "printed": "Printed",
     "printing-format": "Printing format",
     "printing-formats": "Printing formats",
