--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Inprimatu erregistroen zerrenda",
     "print-price": "Prezioak inprimatu",
     "print-quantity": "Kantitatea inprimatu",
+    "print-ticket": "Tiketa inprimatu",
     "printed": "Inprimakia",
     "printing-format": "Inprimatze formatua",
     "printing-formats": "Inprimatze formatuak",
