--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Drukuj listę rekordów",
     "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
+    "print-ticket": "Drukuj bilet",
     "printed": "Wydrukowane",
     "printing-format": "Format druku",
     "printing-formats": "Formaty druku",
