--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir preços",
     "print-quantity": "Imprimir quantidade",
+    "print-ticket": "Imprimir bilhete",
     "printed": "Impresso",
     "printing-format": "Formato de impressão",
     "printing-formats": "Formatos de impressão",
@@ -1289,7 +1290,7 @@
     "remove-from-list": "Remover da lista",
     "removing-logs-until": "Removendo logs até %date%",
     "renew": "Renovar",
-    "renumber": "Renumerar",
+    "renumber": "Renumera",
     "renumber-accounting": "Renumerar Lançamentos",
     "renumber-accounting-error": "Ocorreu um erro ao renumerar lançamentos contábeis no exercício fiscal %exerciseCode%",
     "renumber-accounting-ok": "Reordenação de lançamentos contábeis concluída",
