--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir preço",
     "print-quantity": "Imprimir quantidade",
+    "print-ticket": "Imprimir bilhete",
     "printed": "Imprimido",
     "printing-format": "Formato de impressão",
     "printing-formats": "Formatos de impressão",
