--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Imprimer la liste des enregistrements",
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
+    "print-ticket": "Imprimer le ticket",
     "printed": "Imprimé",
     "printing-format": "Format d'impression",
     "printing-formats": "Formats d'impression",
