--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Imprimir lista de rexistros",
     "print-price": "Imprimir prezos",
     "print-quantity": "Imprimir cantidade",
+    "print-ticket": "Imprimir ticket",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
