--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Stampa l'elenco dei record",
     "print-price": "Stampa prezzi",
     "print-quantity": "Stampare quantità",
+    "print-ticket": "Stampa biglietto",
     "printed": "Stampato",
     "printing-format": "Formato di stampa",
     "printing-formats": "Formati di stampa",
