--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1199,6 +1199,7 @@
     "print-list-of-records": "Imprimix el llistat de registres",
     "print-price": "Imprimir preus",
     "print-quantity": "I",
+    "print-ticket": "Print ticket",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
     "printing-formats": "Formats d'impressió",
