Ocultamos el botón imprimir en las subcuentas.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -313,7 +313,7 @@
     "conversion-rate-not-0": "Bihurketa tasa ezin du 0 izan.",
     "convert-into-customer": "Bezero bihurtu",
     "convert-into-supplier": "Hornitzaile bihurtu",
-    "cookies": "Cookieak",
+    "cookies": "Cookie-ak",
     "copy": "Kopiatu",
     "copy-p": "Bete formularioa eredu honen kopia bat egiteko",
     "copy-subaccounts": "Kontabilitate plana kopiatu",
