Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
+    "company-tax": "Impuesto de sociedades",
     "company-warehouse": "Unternehmen\/Lager",
     "comparative": "Vergleich",
     "compared": "verglichen",
