--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -282,6 +282,7 @@
     "company-commission-info": "It will only apply to the selected company",
     "company-manager": "Company manager",
     "company-name": "Company name",
+    "company-tax": "Impuesto de sociedades",
     "company-warehouse": "Company\/Warehouse",
     "comparative": "Comparative",
     "compared": "Compared",
