--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Só se aplicará á empresa seleccionada",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
+    "company-tax": "Impuesto de sociedades",
     "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparado",
