--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Si applicherà solo all'azienda selezionata",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
+    "company-tax": "Imposta sulle società",
     "company-warehouse": "Azienda\/Magazzino",
     "comparative": "comparativo",
     "compared": "comparato",
