--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
     "company-manager": "Administrator firmy",
     "company-name": "Nazwa firmy",
+    "company-tax": "Impuesto de sociedades",
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Porównawczy",
     "compared": "Porównany",
