--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Aplica-se apenas à empresa selecionada",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
+    "company-tax": "Imposto sobre o rendimento das pessoas coletivas",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "Comparado",
