--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
+    "company-tax": "Impuesto de sociedades",
     "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparado",
