--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -282,6 +282,7 @@
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
+    "company-tax": "Impost de societats",
     "company-warehouse": "Empresa\/Magatzem",
     "comparative": "Comparatiu",
     "compared": "Comparat",
