Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Informações de comissão da empresa",
     "company-manager": "Gerente da empresa",
     "company-name": "Nome da empresa",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Imposto de sociedades",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "Comparado",
