Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Sozialeen gaineko zerga",
     "company-warehouse": "Enpresa\/Gordailua",
     "comparative": "Konparatiboa",
     "compared": "Konparatuta",
