--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Fiscalité des entreprises",
     "company-warehouse": "Entreprise\/Entrepôt",
     "comparative": "Comparatif",
     "compared": "Comparé à",
