Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom d'empresa",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Impost de societats",
     "company-warehouse": "Empresa\/Magatzem",
     "comparative": "Comparatiu",
     "compared": "Comparat",
