--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1623,7 +1623,7 @@
     "valid-for-day": "Egunerako baliozkotua",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
-    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzen errore bat egon da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri.",
+    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzean errore bat gertatu da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri.",
     "valuation-type": "Balorazio mota",
     "value": "Balioa",
     "value-x": "X balioa",
