--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Daň z příjmů právnických osob",
     "company-warehouse": "Společnost\/Sklad",
     "comparative": "Comparativo",
     "compared": "Comparado",
