Actualizadas las traducciones.

--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -330,7 +330,7 @@
     "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Crear remito",
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
@@ -424,8 +424,8 @@
     "Deleted": "Eliminado",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Remito",
-    "delivery-note-email-subject": "Su albarán %code%",
-    "delivery-note-email-text": "Hola, le adjunto su albarán %code%",
+    "delivery-note-email-subject": "Su Remitos %code%",
+    "delivery-note-email-text": "Hola, le adjunto su Remitos %code%",
     "delivery-notes": "Remitos",
     "delivery-notes-button": "Alb. Ptes:",
     "department": "Departamento",
