Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1617,7 +1617,7 @@
     "user": "Usuário",
     "user-and-config": "Usuário e configuração",
     "users": "Usuários",
-    "using-apc": "Usando cache APC",
+    "using-apc": "Usando o cache APC",
     "using-filecache": "Usando o Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido por um dia",
