Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
+    "manufacturing": "Fabricació",
     "march": "Març",
     "margin": "Marge",
     "margin-top": "Marge superior",
