--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricación",
     "march": "Březen",
     "margin": "Margen",
     "margin-top": "Márgen superior",
