--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -931,6 +931,7 @@
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
+    "manufacturing": "Herstellung",
     "march": "März",
     "margin": "Rand",
     "margin-top": "Rand oben",
