--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -931,6 +931,7 @@
     "manufacturer": "Manufacturer",
     "manufacturer-code": "Manufacturer code",
     "manufacturers": "Manufacturers",
+    "manufacturing": "Manufacturing",
     "march": "March",
     "margin": "Margin",
     "margin-top": "Margin top",
