--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricación",
     "march": "Marzo",
     "margin": "Margen",
     "margin-top": "Margen superior",
