--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabrikatzailea",
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
+    "manufacturing": "Fabrikazioa",
     "march": "Martxo",
     "margin": "Marjina",
     "margin-top": "Goiko marjina",
