--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Code du fabricant",
     "manufacturers": "Fabricants",
+    "manufacturing": "Fabrication",
     "march": "Mars",
     "margin": "Marge",
     "margin-top": "Haut de la marge",
