--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricación",
     "march": "Marzo",
     "margin": "Marxe",
     "margin-top": "Marxe superior",
