--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -931,6 +931,7 @@
     "manufacturer": "fabbricante",
     "manufacturer-code": "Codice produttore",
     "manufacturers": "Produttori",
+    "manufacturing": "Manifattura",
     "march": "marzo",
     "margin": "margine",
     "margin-top": "Margine superiore",
