--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -931,6 +931,7 @@
     "manufacturer": "Producent",
     "manufacturer-code": "Kod producenta",
     "manufacturers": "Producenci",
+    "manufacturing": "Produkcja",
     "march": "Marzec",
     "margin": "Marża",
     "margin-top": "Margines górny",
