--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -931,6 +931,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricação",
     "march": "Março",
     "margin": "m",
     "margin-top": "Topo da margem",
