Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1555,6 +1555,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Cost total",
+    "total-pending": "Total pendent",
     "total-purchases": "Total compres",
     "total-sales": "Total vendes",
     "total-value-error": "Import total de %docType% %docCode% incorrecte (%docTotal%). Import correcte: %calcTotal%",
