--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1555,6 +1555,7 @@
     "total": "Totale",
     "total-amount": "somma totale",
     "total-cost": "Costo totale",
+    "total-pending": "Totale in sospeso",
     "total-purchases": "Acquisti totali",
     "total-sales": "Vendite totali",
     "total-value-error": "Quantità totale di 0 1 non corretta (2). Importo corretto: 3",
