--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -282,7 +282,7 @@
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
     "company-manager": "Administrator firmy",
     "company-name": "Nazwa firmy",
-    "company-tax": "Impuesto de sociedades",
+    "company-tax": "Podatek dochodowy od osób prawnych",
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Porównawczy",
     "compared": "Porównany",
@@ -1555,6 +1555,7 @@
     "total": "Razem",
     "total-amount": "Suma całkowita",
     "total-cost": "Całkowity koszt",
+    "total-pending": "Całkowita kwota do zapłaty",
     "total-purchases": "Całkowite zakupy",
     "total-sales": "Całkowita sprzedaż",
     "total-value-error": "Wartość całkowita %docType% %docCode% jest nieprawidłowa (%docTotal%). Właściwa wartość: %calcTotal%",
