--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1555,6 +1555,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "total-cost",
+    "total-pending": "Total pendent",
     "total-purchases": "total-purchases",
     "total-sales": "total-sales",
     "total-value-error": "La cantitat total en %docType% %docCode% és incorrecta (%docTotal%). La cantitat correcta és: %calcTotal%",
