--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -1555,6 +1555,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
+    "total-pending": "Total pendiente",
     "total-purchases": "Total compras",
     "total-sales": "Total ventas",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
