--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1555,6 +1555,7 @@
     "total": "Total",
     "total-amount": "Valor total",
     "total-cost": "Custo total",
+    "total-pending": "Total pendente",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
     "total-value-error": "Quantidade total de 0 1 incorreta (2). Valor correto: 3",
