Actualizadas las traducciones.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -936,7 +936,7 @@
     "margin": "Marxe",
     "margin-top": "Marxe superior",
     "mark-as-homepage": "Marcar como páxina de inicio",
-    "marked-as-homepage": "Marcado como páxina de inicio. Pulsa de novo para desmarcar.",
+    "marked-as-homepage": "Marcado como páxina de inicio. Preme de novo para desmarcar.",
     "max-input-vars-warning": "Coa configuración actual de PHP (max_input_vars) non poderás traballar con documentos de máis de %numlines% líneas.",
     "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
@@ -1007,11 +1007,11 @@
     "negative-balance": "Saldo Negativo",
     "net": "Neto",
     "new": "Novo",
-    "new-acc-entry-line-p": "Podes introducir unha liña escribindo o código da  subconta debaixo ou pulsando o botón  subcontas e seleccionando unha  subconta.",
+    "new-acc-entry-line-p": "Podes introducir unha liña escribindo o código da subconta debaixo ou premendo o botón subcontas e seleccionando unha subconta.",
     "new-address": "Nova tradución",
     "new-customer": "novo cliente",
     "new-customers": "Novos clientes",
-    "new-invoice-line-p": "Podes engadir un produto pulsando o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou pulsa o botón liña para unha liña sen produto.",
+    "new-invoice-line-p": "Podes engadir un produto premendo o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou preme o botón liña para unha liña sen produto.",
     "new-password": "Novo contrasinal",
     "new-price": "Novo prezo",
     "new-refund": "Nova devolución",
@@ -1280,7 +1280,7 @@
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
     "register-symbol": "#",
     "registered-installation": "Instalación rexistrada #%number%",
-    "registered-installation-p": "Esta instalación xa foi rexistrada. Se tes  plugins de pago, pulsa o botón administrar para vinculalos e poder actualizar.",
+    "registered-installation-p": "Esta instalación xa foi rexistrada. Se tes plugins de pago, preme o botón administrar para vinculalos e poder actualizar.",
     "regularization-operation": "Regularización",
     "reject": "Rexeitar",
     "rejected": "Rexeitado",
