Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins actius",
     "encrypt": "Xifrar",
     "end-date": "Data de finalització",
+    "end-month": "Mes de fi",
     "end-time": "Hora de finalització",
     "epigraph": "Epígraf",
     "epigraph-group": "Grup d'epígraf",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Element obtingut '%item%' de Filecache.",
     "filecache-set-key-item": "Element establert '%item%' a Filecache.",
     "files": "Fitxers",
+    "filter": "Filtrar",
     "filter-method": "Mètode del filtre",
     "filter-records-containing-indicated-value": "Filtrar els registres que contenen el valor indicat",
     "filters": "Filtres",
@@ -1432,6 +1434,7 @@
     "start": "Inici",
     "start-date": "Data d'inici",
     "start-hour": "Hora d'inici",
+    "start-month": "Mes d'inici",
     "start-time": "Hora d'inici",
     "starting-cron": "Iniciant el cron per a FacturaScripts...",
     "state": "Estat",
