--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Aktivierte Plugins",
     "encrypt": "Verschlüsseln",
     "end-date": "Endtermin",
+    "end-month": "Endmonat",
     "end-time": "Endzeit",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph-Gruppe",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Getted-Element '0' aus dem Filecache.",
     "filecache-set-key-item": "Setze das Element '0' auf den Filecache.",
     "files": "Aufzeichnungen",
+    "filter": "F",
     "filter-method": "Filtermethode",
     "filter-records-containing-indicated-value": "Datensätze filtern, die den angegebenen Wert enthalten",
     "filters": "Filter",
@@ -1432,6 +1434,7 @@
     "start": "Start",
     "start-date": "Anfangsdatum",
     "start-hour": "Startzeit",
+    "start-month": "Startmonat",
     "start-time": "Startzeit",
     "starting-cron": "Ab FacturaScripts Cron...",
     "state": "Zustand",
