--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Active plugins",
     "encrypt": "Encrypt",
     "end-date": "End date",
+    "end-month": "End month",
     "end-time": "End time",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph group",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Getted element '%item%' from Filecache.",
     "filecache-set-key-item": "Setted element '%item%' to Filecache.",
     "files": "Files",
+    "filter": "Filter",
     "filter-method": "Filter method",
     "filter-records-containing-indicated-value": "Filter records containing indicated value",
     "filters": "Filters",
@@ -1432,6 +1434,7 @@
     "start": "Start",
     "start-date": "Start date",
     "start-hour": "Start hour",
+    "start-month": "Start month",
     "start-time": "Start time",
     "starting-cron": "Starting FacturaScripts cron execution...",
     "state": "State",
