--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugin aktiboak",
     "encrypt": "Enkriptatzea",
     "end-date": "Amaiera data",
+    "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
     "epigraph": "Epigrafea",
     "epigraph-group": "Epigrafe taldea",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Filecache-tik '%item%' elementua eskuratu da.",
     "filecache-set-key-item": "'%item%' elementua Filecache-ra esleituta.",
     "files": "Artxiboak",
+    "filter": "Iragazi",
     "filter-method": "Iragazki metodoa",
     "filter-records-containing-indicated-value": "Iragazi adierazitako balioa duten erregistroak",
     "filters": "Iragazkiak",
@@ -1432,6 +1434,7 @@
     "start": "Hasiera",
     "start-date": "Hasiera data",
     "start-hour": "Hasiera ordua",
+    "start-month": "Hasteko hilabetea",
     "start-time": "Hasiera ordua",
     "starting-cron": "FacturaScripts-en cron lana abiarazten...",
     "state": "Egoera",
