--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins activés",
     "encrypt": "Chiffrement",
     "end-date": "Date de fin",
+    "end-month": "Mois de fin",
     "end-time": "Heure de fin",
     "epigraph": "Épigraphe",
     "epigraph-group": "Groupe épigraphique",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Élément '%item%' obtenu de Filecache.",
     "filecache-set-key-item": "Réglé l'élément '%item%' à Filecache.",
     "files": "Fichiers",
+    "filter": "Filtrer",
     "filter-method": "Méthode de filtrage",
     "filter-records-containing-indicated-value": "Filtrer les enregistrements contenant la valeur indiquée",
     "filters": "Filtres",
@@ -1432,6 +1434,7 @@
     "start": "Départ",
     "start-date": "Date de début",
     "start-hour": "Heure de début",
+    "start-month": "Mois de début",
     "start-time": "Heure de départ",
     "starting-cron": "Exécution des tâches programmées de FacturaScripts ...",
     "state": "Etat",
