--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación",
     "end-date": "Data de finalización",
+    "end-month": "Mes de fin",
     "end-time": "Hora de remate",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de epígrafos",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Elemento descargado '%item%' de Filecache.",
     "filecache-set-key-item": "Elemento asignado '%item%' para Filecache.",
     "files": "Arquivos",
+    "filter": "Filtrar",
     "filter-method": "Método de filtro",
     "filter-records-containing-indicated-value": "Filtrar rexistros que conteñan valor indicado",
     "filters": "Filtros",
@@ -1432,6 +1434,7 @@
     "start": "Inicio",
     "start-date": "Data de inicio",
     "start-hour": "Hora de inicio",
+    "start-month": "Mes de inicio",
     "start-time": "Hora de comezo",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
