--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
     "end-date": "Data di fine",
+    "end-month": "Mese di fine",
     "end-time": "tempo finale",
     "epigraph": "Epigrafe",
     "epigraph-group": "Gruppo epigrafico",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Elemento gettato '0' da Filecache.",
     "filecache-set-key-item": "Elemento settato '0' a Filecache.",
     "files": "record",
+    "filter": "Filtro",
     "filter-method": "Metodo di filtro",
     "filter-records-containing-indicated-value": "Filtra i record che contengono il valore indicato",
     "filters": "Filtri",
@@ -1432,6 +1434,7 @@
     "start": "Inizio",
     "start-date": "Data d'inizio",
     "start-hour": "Ora di inizio",
+    "start-month": "Mese di inizio",
     "start-time": "inizio",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
