--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Aktywne wtyczki",
     "encrypt": "Szyfrowanie",
     "end-date": "Data zakończenia",
+    "end-month": "Miesiąc zakończenia",
     "end-time": "Czas zakończenia",
     "epigraph": "Epigraf",
     "epigraph-group": "Grupa epigrafu",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
     "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
     "files": "Pliki",
+    "filter": "Filtruj",
     "filter-method": "Metoda filtracji",
     "filter-records-containing-indicated-value": "Filtruj rekordy zawierające wartość",
     "filters": "Filtry",
@@ -1432,6 +1434,7 @@
     "start": "Początek",
     "start-date": "Data rozpoczęcia",
     "start-hour": "Godzina rozpoczęcia",
+    "start-month": "Miesiąc rozpoczęcia",
     "start-time": "Czas rozpoczęcia",
     "starting-cron": "Uruchamianie crona FacturaScripts...",
     "state": "Stan",
