--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins ativados",
     "encrypt": "Criptografia",
     "end-date": "Data Final",
+    "end-month": "Mês de fim",
     "end-time": "hora-final",
     "epigraph": "Título",
     "epigraph-group": "Grupo de Epígrafe",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Obtido elemento '0' do Filecache.",
     "filecache-set-key-item": "Elemento atribuído '%item%' ao Filecache.",
     "files": "Arquivos",
+    "filter": "Filtrar",
     "filter-method": "Método de filtragem",
     "filter-records-containing-indicated-value": "Filtrar registros que contêm o valor indicado",
     "filters": "Filtros",
@@ -1432,6 +1434,7 @@
     "start": "Início",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
+    "start-month": "Mês de início",
     "start-time": "Hora de início",
     "starting-cron": "Iniciando cron para FacturaScripts...",
     "state": "Estado",
