--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
     "end-date": "Data final",
+    "end-month": "Fim de mês",
     "end-time": "Hora de finalização",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo Epígrafe",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Obtém o elemento '0' da Filecache.",
     "filecache-set-key-item": "Elemento configurado '0' para Filecache.",
     "files": "arquivos",
+    "filter": "Filtrar",
     "filter-method": "Método de filtragem",
     "filter-records-containing-indicated-value": "Filtrar registros contendo o valor indicado",
     "filters": "Filtros",
@@ -1432,6 +1434,7 @@
     "start": "Início",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
+    "start-month": "Mês de início",
     "start-time": "Hora de início",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
