--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Connectors actius",
     "encrypt": "Sifrar",
     "end-date": "Data de fi",
+    "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
     "epigraph": "Grup contable",
     "epigraph-group": "Grup d'epìgraf",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "L'element '%item%' s'ha obtés de Filecache.",
     "filecache-set-key-item": "L'element '%item%' s'ha fixat en Filecache.",
     "files": "Fitxers",
+    "filter": "Filtrar",
     "filter-method": "Método del filtre",
     "filter-records-containing-indicated-value": "Filtrar els registres que contenen el valor indicat",
     "filters": "Filtres",
@@ -1432,6 +1434,7 @@
     "start": "Inicio",
     "start-date": "Data d'inici",
     "start-hour": "Hora d'inici",
+    "start-month": "Mes d'inici",
     "start-time": "Hora d'inici",
     "starting-cron": "Escomençant l'eixecució del cron de FacturaScripts...",
     "state": "Estat",
