--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -530,6 +530,7 @@
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación.",
     "end-date": "Fecha de fin",
+    "end-month": "Mes de fin",
     "end-time": "Hora finalización",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
@@ -622,6 +623,7 @@
     "filecache-get-key-item": "Obtenido elemento '%item%' from Filecache.",
     "filecache-set-key-item": "Asignado elemento '%item%' a Filecache.",
     "files": "Archivos",
+    "filter": "Filtrar",
     "filter-method": "Método del filtro.",
     "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
     "filters": "Filtros",
@@ -1432,6 +1434,7 @@
     "start": "Inicio",
     "start-date": "Fecha de inicio",
     "start-hour": "Hora de inicio",
+    "start-month": "Mes de inicio",
     "start-time": "Hora inicio",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
